# agent-bridge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.2.0.md  SECURITY.md  pyproject.toml
scripts/: install.ps1  install.sh
skills/agent-bridge/: SKILL.md
src/agent_bridge/: __init__.py  __main__.py  cli.py
tests/: test_bridge.py
tests/fixtures/claude_project/: demo.jsonl
tests/fixtures/codex_session/: rollout-2026-05-23T12-00-00-aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee.jsonl
tests/fixtures/grok_session/: chat_history.jsonl  summary.json
